--- a/index.html
+++ b/index.html
@@ -270,7 +270,50 @@
             <div class="blogInnerContainer">
                 <h2>Maximize Your Performance</h2>
                 <div class="rowsliderContainerBlog">
-                    
+                    <div class="sliderCOntainerBlog">
+                        <div class="innerContainerSliderBlog">
+                            <div class="imageContainerBlog">
+                                <img src="./images/20.png">
+                            </div>
+                            <div class="contentSecder">
+                                <h6> Take care of yourself</h6>
+                                <p>Fuel your body and mind. Stay fit. Sleep well.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliderCOntainerBlog">
+                        <div class="innerContainerSliderBlog">
+                            <div class="imageContainerBlog">
+                                <img src="./images/20.png">
+                            </div>
+                            <div class="contentSecder">
+                                <h6> Take care of yourself</h6>
+                                <p>Fuel your body and mind. Stay fit. Sleep well.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliderCOntainerBlog">
+                        <div class="innerContainerSliderBlog">
+                            <div class="imageContainerBlog">
+                                <img src="./images/20.png">
+                            </div>
+                            <div class="contentSecder">
+                                <h6> Take care of yourself</h6>
+                                <p>Fuel your body and mind. Stay fit. Sleep well.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliderCOntainerBlog">
+                        <div class="innerContainerSliderBlog">
+                            <div class="imageContainerBlog">
+                                <img src="./images/20.png">
+                            </div>
+                            <div class="contentSecder">
+                                <h6> Take care of yourself</h6>
+                                <p>Fuel your body and mind. Stay fit. Sleep well.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
