--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
 
@@ -60,7 +61,7 @@
             <img src="./images/3.png">
         </div>
     </div>
-    <div class="blackPanther">
+    <div class="blackPanther" style="background-image: url('./images/21.png');">
         <div class="container">
             <div class="contentBlackPanther">
                 <h2>Ingredients For Life</h2>
@@ -70,19 +71,19 @@
                             <div class="col-md-4">
                                 <ul>
                                     <li>
-                                        <img src="./iamges/4.png">
+                                        <img src="./images/4.png">
                                         <span>Vitamin C (organic amla fruit Extract)</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/5.png">
+                                        <img src="./images/5.png">
                                         <span>organic elderberry (Fruit Extract)</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/6.png">
+                                        <img src="./images/6.png">
                                         <span>organic astragalus(Extract Root)</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/7.png">
+                                        <img src="./images/7.png">
                                         <span>organic Oregano Leaf Powder</span>
                                     </li>
                                 </ul>
@@ -93,19 +94,19 @@
                             <div class="col-md-4">
                                 <ul>
                                     <li>
-                                        <img src="./iamges/9.png">
+                                        <img src="./images/9.png">
                                         <span>organic Ginger (Extract Root)</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/10.png">
+                                        <img src="./images/10.png">
                                         <span>organic moringa leaf powder (Moringa Oleifera)</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/11.png">
+                                        <img src="./images/11.png">
                                         <span>organic garlic bulb powder</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/12.png">
+                                        <img src="./images/12.png">
                                         <span>organic Acacia gum</span>
                                     </li>
                                 </ul>
@@ -117,19 +118,19 @@
                             <div class="col-md-4">
                                 <ul>
                                     <li>
-                                        <img src="./iamges/4.png">
+                                        <img src="./images/4.png">
                                         <span>Vitamin C (organic amla fruit Extract)</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/5.png">
+                                        <img src="./images/5.png">
                                         <span>organic elderberry (Fruit Extract)</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/6.png">
+                                        <img src="./images/6.png">
                                         <span>organic astragalus(Extract Root)</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/7.png">
+                                        <img src="./images/7.png">
                                         <span>organic Oregano Leaf Powder</span>
                                     </li>
                                 </ul>
@@ -140,19 +141,19 @@
                             <div class="col-md-4">
                                 <ul>
                                     <li>
-                                        <img src="./iamges/9.png">
+                                        <img src="./images/9.png">
                                         <span>organic Ginger (Extract Root)</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/10.png">
+                                        <img src="./images/10.png">
                                         <span>organic moringa leaf powder (Moringa Oleifera)</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/11.png">
+                                        <img src="./images/11.png">
                                         <span>organic garlic bulb powder</span>
                                     </li>
                                     <li>
-                                        <img src="./iamges/12.png">
+                                        <img src="./images/12.png">
                                         <span>organic Acacia gum</span>
                                     </li>
                                 </ul>
@@ -319,6 +320,7 @@
         </div>
     </div>
 </body>
+<script type="text/javascript" src="naznisunona.js"></script>
 </html>
 
 
