--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 
     <header>
         <div class="container">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <div class="logoContainer">
                 <img src="./images/1.png">
             </div>
