--- a/index.html
+++ b/index.html
@@ -325,6 +325,75 @@
             </div>
         </div>
     </div>
+    <footer style="    background-image: url(./images/21.png);">
+        <div class="newsLetter">
+            <div class="container">
+                <h2>Newsletter Subscription</h2>
+                <p>Sign up to our newsletter to be the first who learns about our great promotions!</p>
+                <form>
+                    <div class="inputContainer">
+                        <input type="email" name="" placeholder="Email Address">
+                        <button type="submit">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="footerMain">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="containerlistItemsFooter">
+                            <h5>About</h5>
+                            <ul>
+                                <li><a href="#">Supplement Facts</a></li>
+                                <li><a href="#">Blog Posts</a></li>
+                                <li><a href="#">FAQs</a></li>
+                                <li><a href="#">Contact Us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="containerlistItemsFooter">
+                            <h5>Information</h5>
+                            <ul>
+                                <li><a href="#">Supplement Facts</a></li>
+                                <li><a href="#">Blog Posts</a></li>
+                                <li><a href="#">FAQs</a></li>
+                                <li><a href="#">Contact Us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="containerlistItemsFooter">
+                            <h5>Shop</h5>
+                            <ul>
+                                <li><a href="#">Supplement Facts</a></li>
+                                <li><a href="#">Blog Posts</a></li>
+                                <li><a href="#">FAQs</a></li>
+                                <li><a href="#">Contact Us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="containerlistItemsFooter">
+                            <h5>Follow Us</h5>
+                            <ul>
+                                <li><a href="#">Supplement Facts</a></li>
+                                <li><a href="#">Blog Posts</a></li>
+                                <li><a href="#">FAQs</a></li>
+                                <li><a href="#">Contact Us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyRights">
+            <div class="container">
+                <p>© Copyright 2020 Nazzo Nutrition. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 <script type="text/javascript" src="naznisunona.js"></script>
 </html>
