starting about the page

--- a/janus/about.html
+++ b/janus/about.html
@@ -317,6 +317,17 @@
                     </div>
                 </div>
             </div>
+            <div class="bottomFooterCOntainer">
+                <div class="logoCOntainer">
+                    <img src="./images/7.png">
+                    <p>Copyright ©2020 Fluid Energy. All Rights Reserved.</p>
+                </div>
+                <div class="numberCOntainer">
+                    <a href="#">
+                        <img src="./images/8.png">(858) 900-3231
+                    </a>
+                </div>
+            </div>
         </div>
     </footer>
 
