--- a/janus/about.html
+++ b/janus/about.html
@@ -64,214 +64,63 @@
         </div>
     </header>
 
-    <div class="bannerHome" style="background: url('./images/3.png');">
+    <div class="pageBanner" style="background-image: url('./images/9.png');">
         <div class="container">
-            <div class="contentContainerBannerHOme">
-                <h2>Make your Small Business a Big Player in a Competitive Environment.</h2>
-                <p>Enterprise-Grade Systems, Processes, and Automation for a fraction of what the Fortune 500 companies pay for them. </p>
-                <div class="buttonContainersHomeBanner">
-                    <a href="#" class="getInTOuch">About Us <img src="./images/2.svg"></a>
-                    <a href="#" class="reversedButton">About Us <img src="./images/2.svg"></a>
-                </div>
+            <div class="contentPageBanner">
+                <h2>Why Us? So Many Reasons.</h2>
+                <p>The best one is that we Empower SMEs and Funded Startups to do Big Things.</p>
             </div>
         </div>
     </div>
-    <div class="section2HomePage">
+    <div class="section2AboutPage">
         <div class="container">
-            <div class="contentSecction2HOmepage">
-                <h1>
-                    DISCOVER - TRANSFORM - IMPROVE - AFFORDABLY
-                </h1>
-                <h2>Calling All SME Entrepreneurs, Funded Startups, CEOs & Stakeholders.</h2>
-                <p>Have you asked yourself the question, “Can anyone out there transform how we manage our business?” Are any of these your Business Frustrations?</p>
+            <div class="headingContaienerBlodl">
+                <h2>UNIQUE TEAM LEADERSHIP  I COMPELLING TRANSFORMATION</h2>
             </div>
-            <div class="blocsContainer">
+        </div>
+        <div class="container">
+            <div class="rowsContainerAbout">
                 <div class="row">
-                    <div class="col-md-6">
-                        <div class="boxContainer">
-                            <div class="imageContainerBox">
-                                <img src="./images/1.png">
-                            </div>
-                            <div class="fixedInBox">
-                                <div class="innerFixed">
-                                    <h4>ROI AND CASH FLOW ALARM SIGNALS</h4>
-                                    <ul>
-                                        <li><img src="./images/4.svg">Costs on the rise, while revenues stay constant or go down.</li>
-                                        <li><img src="./images/4.svg">You can’t seem to break the “no growth” logjam.</li>
-                                        <li><img src="./images/4.svg">Overdraft alerts disrupt your equilibrium too often.</li>
-                                        <li><img src="./images/4.svg">The ability to streamline cashflows is a distant concept for you.</li>
-                                    </ul>
-                                    <a href="#">Read More <img src="./images/3.svg"></a>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="column1">
+                        <img src="./images/10.png">
                     </div>
-                    <div class="col-md-6">
-                        <div class="boxContainer">
-                            <div class="imageContainerBox">
-                                <img src="./images/1.png">
-                            </div>
-                            <div class="fixedInBox">
-                                <div class="innerFixed">
-                                    <h4>ROI AND CASH FLOW ALARM SIGNALS</h4>
-                                    <ul>
-                                        <li><img src="./images/4.svg">Costs on the rise, while revenues stay constant or go down.</li>
-                                        <li><img src="./images/4.svg">You can’t seem to break the “no growth” logjam.</li>
-                                        <li><img src="./images/4.svg">Overdraft alerts disrupt your equilibrium too often.</li>
-                                        <li><img src="./images/4.svg">The ability to streamline cashflows is a distant concept for you.</li>
-                                    </ul>
-                                    <a href="#">Read More <img src="./images/3.svg"></a>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="column2">
+                        <h3>Our Mission</h3>
+                        <p>To use our Big Enterprise experience to leverage cutting-edge technologies and methodologies to deliver successful solutions for small- and medium-sized businesses, (and funded startups) leading to groundbreaking success.  </p>
                     </div>
-                    <div class="col-md-6">
-                        <div class="boxContainer">
-                            <div class="imageContainerBox">
-                                <img src="./images/1.png">
-                            </div>
-                            <div class="fixedInBox">
-                                <div class="innerFixed">
-                                    <h4>ROI AND CASH FLOW ALARM SIGNALS</h4>
-                                    <ul>
-                                        <li><img src="./images/4.svg">Costs on the rise, while revenues stay constant or go down.</li>
-                                        <li><img src="./images/4.svg">You can’t seem to break the “no growth” logjam.</li>
-                                        <li><img src="./images/4.svg">Overdraft alerts disrupt your equilibrium too often.</li>
-                                        <li><img src="./images/4.svg">The ability to streamline cashflows is a distant concept for you.</li>
-                                    </ul>
-                                    <a href="#">Read More <img src="./images/3.svg"></a>
-                                </div>
-                            </div>
-                        </div>
+                </div>
+                <div class="row">
+                    <div class="column1">
+                        <img src="./images/10.png">
                     </div>
-                    <div class="col-md-6">
-                        <div class="boxContainer">
-                            <div class="imageContainerBox">
-                                <img src="./images/1.png">
-                            </div>
-                            <div class="fixedInBox">
-                                <div class="innerFixed">
-                                    <h4>ROI AND CASH FLOW ALARM SIGNALS</h4>
-                                    <ul>
-                                        <li><img src="./images/4.svg">Costs on the rise, while revenues stay constant or go down.</li>
-                                        <li><img src="./images/4.svg">You can’t seem to break the “no growth” logjam.</li>
-                                        <li><img src="./images/4.svg">Overdraft alerts disrupt your equilibrium too often.</li>
-                                        <li><img src="./images/4.svg">The ability to streamline cashflows is a distant concept for you.</li>
-                                    </ul>
-                                    <a href="#">Read More <img src="./images/3.svg"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="boxContainer">
-                            <div class="imageContainerBox">
-                                <img src="./images/1.png">
-                            </div>
-                            <div class="fixedInBox">
-                                <div class="innerFixed">
-                                    <h4>ROI AND CASH FLOW ALARM SIGNALS</h4>
-                                    <ul>
-                                        <li><img src="./images/4.svg">Costs on the rise, while revenues stay constant or go down.</li>
-                                        <li><img src="./images/4.svg">You can’t seem to break the “no growth” logjam.</li>
-                                        <li><img src="./images/4.svg">Overdraft alerts disrupt your equilibrium too often.</li>
-                                        <li><img src="./images/4.svg">The ability to streamline cashflows is a distant concept for you.</li>
-                                    </ul>
-                                    <a href="#">Read More <img src="./images/3.svg"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="boxContainer">
-                            <div class="imageContainerBox">
-                                <img src="./images/1.png">
-                            </div>
-                            <div class="fixedInBox">
-                                <div class="innerFixed">
-                                    <h4>ROI AND CASH FLOW ALARM SIGNALS</h4>
-                                    <ul>
-                                        <li><img src="./images/4.svg">Costs on the rise, while revenues stay constant or go down.</li>
-                                        <li><img src="./images/4.svg">You can’t seem to break the “no growth” logjam.</li>
-                                        <li><img src="./images/4.svg">Overdraft alerts disrupt your equilibrium too often.</li>
-                                        <li><img src="./images/4.svg">The ability to streamline cashflows is a distant concept for you.</li>
-                                    </ul>
-                                    <a href="#">Read More <img src="./images/3.svg"></a>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="column2">
+                        <h3>Our Mission</h3>
+                        <p>To use our Big Enterprise experience to leverage cutting-edge technologies and methodologies to deliver successful solutions for small- and medium-sized businesses, (and funded startups) leading to groundbreaking success.  </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
     <div class="whyUs">
-        <div class="container">
-            <h2>Why Us?</h2>
-            <p>Janus Consulting Partners, LLC's pedigree pillars itself significantly in an Ernst and Young experience with successful strategic management projects across numerous Fortune 500 companies. We scope business processes to deliver improved performance fast. Just a few of multiple achievements include: </p>
-        </div>
-        <div class="noContainer">
-            <div class="innerNoContainer">
-                <div class="imageCOntainerLeft">
-                    <img src="./images/5.svg">
-                </div>
-                <div class="listContainerNoContainerHomepage">
-                    <ul>
-                        <li>
-                            <div class="boxContainerNoCOntainer">
-                                <h2>14+</h2>
-                                <p>years of experience in Business Analysis with a proven track record of proactive analytical excellence in a fast-paced business environment</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="boxContainerNoCOntainer">
-                                <h2>07% </h2>
-                                <p>quarter-over-quarter increase in lead generation</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="boxContainerNoCOntainer">
-                                <h2>$250M+ </h2>
-                                <p>generated in additional project work for leading Big-4 consulting firm</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="boxContainerNoCOntainer">
-                                <h2>36%</h2>
-                                <p>quarter-over-quarter increase in client retention</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="boxContainerNoCOntainer">
-                                <h2>23%</h2>
-                                <p>year-over-year decrease in employee churn</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="sectoinLastHomepage">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="contentCOntainersectionlastSection">
-                        <h2>The timing for you to act with determination is NOW!</h2>
-                        <p>Get the SME Strategic Management Team with Big Company Ammunition in your corner at affordable pricing. <strong>TRANSPARENT - MODERN - TECHNOLOGY-BASED METHODS</strong></p>
-                        <a href="#" class="getInTOuch">Contact Us Today <img src="./images/2.svg"></a>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <img src="./images/2.png">
-                    <div class="rotatedText">
-                        <strong>Joseph Paglinawan</strong>
-                        <span>C.E.O JANUS CONSULTING Partners</span>
+                    <div class="contentWhyUs">
+                        <h2>Why Us?</h2>
+                        <p>We have devised a formula to deliver the results that you expect -  quickly, seamlessly, and at affordable fees. Our proposals show that projected benefits cover our fees multiple times.</p>
+                        <p>We streamline cashflows, improve employee performance, and scope business processes in a tightly structured consultation that delivers results second to none. Also we address Top-line growth and Bottom-line cost savings through process improvement methods.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+
+
+
 
 
 
