--- a/janus/about.html
+++ b/janus/about.html
@@ -103,7 +103,7 @@
     </div>
 
 
-    <div class="whyUs">
+<!--     <div class="whyUss" style="background-image: url('./images/11.png');">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -113,10 +113,48 @@
                         <p>We streamline cashflows, improve employee performance, and scope business processes in a tightly structured consultation that delivers results second to none. Also we address Top-line growth and Bottom-line cost savings through process improvement methods.</p>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="circular">
+                        <div class="innerCicular">
+                            <div class="mainGola">
+                                <h3>resource pool contains</h3>
+                            </div>
+                            <div class="circles">
+                                <div class="circle">
+                                    <span>Analysis</span>
+                                </div>
+                                <div class="circle">
+                                    <span>Analysis</span>
+                                </div>
+                                <div class="circle">
+                                    <span>Analysis</span>
+                                </div>
+                                <div class="circle">
+                                    <span>Analysis</span>
+                                </div>
+                                <div class="circle">
+                                    <span>Analysis</span>
+                                </div>
+                                <div class="circle">
+                                    <span>Analysis</span>
+                                </div>
+                                <div class="circle">
+                                    <span>Analysis</span>
+                                </div>
+                                <div class="circle">
+                                    <span>Analysis</span>
+                                </div>
+                                <div class="circle">
+                                    <span>Analysis</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
+ -->
 
 
 
