--- a/janus/about.html
+++ b/janus/about.html
@@ -155,7 +155,66 @@
         </div>
     </div>
  -->
-
+ <div class="boutJoseph">
+     <div class="flexed">
+         <div class="col1">
+             <div class="imageCOntainercol1">
+                 <img src="./images/13.png">
+                 <span class="jpspehName">Joseph Paglinawan</span>
+             </div>
+         </div>
+         <div class="col2">
+             <div class="contentContainerJosepgh">
+                <h2>About Joseph</h2>
+                <div class="containerinnerBoxsed">
+                     <h6><img src="./images/14.png">Education</h6>
+                     <ul>
+                         <li><img src="./images/5.png"><span>Master of Strategic Management:</span> Indiana University - Bloomington</li>
+                         <li><img src="./images/5.png"><span>Master of Strategic Management:</span> Indiana University - Bloomington</li>
+                         <li><img src="./images/5.png"><span>Master of Strategic Management:</span> Indiana University - Bloomington</li>
+                     </ul>
+                </div>
+                <div class="containerinnerBoxsed">
+                   <h6><img src="./images/15.png">Certifications</h6>
+                   <ul>
+                       <li><img src="./images/5.png">Postgraduate Certificate in Project Management: UMass Amherst (In Progress)</li>
+                       <li><img src="./images/5.png">Postgraduate Certificate in Project Management: UMass Amherst (In Progress)</li>
+                       <li><img src="./images/5.png">Postgraduate Certificate in Project Management: UMass Amherst (In Progress)</li>
+                       <li><img src="./images/5.png">Postgraduate Certificate in Project Management: UMass Amherst (In Progress)</li>
+                       <li><img src="./images/5.png">Postgraduate Certificate in Project Management: UMass Amherst (In Progress)</li>
+                       <li><img src="./images/5.png">Postgraduate Certificate in Project Management: UMass Amherst (In Progress)</li>
+                   </ul>
+               </div>
+                <div class="containerinnerBoxsed">
+                   <h6><img src="./images/16.png">Experience</h6>
+                   <ul>
+                       <li>
+                            <img src="./images/5.png">
+                           Eight years of management consultation across a broad activity spectrum. Special focus on:
+                       </li>
+                       <li>
+                           Special focus on:
+                           <ul>
+                                <li>- Business Process Improvement (BPI) <span>using industry best practices</span> </li>   
+                                <li>- Business Process Improvement (BPI) <span>using industry best practices</span> </li>   
+                                <li>- Business Process Improvement (BPI) <span>using industry best practices</span> </li>   
+                                <li>- Business Process Improvement (BPI) <span>using industry best practices</span> </li>   
+                           </ul>
+                       </li>
+                   </ul>
+               </div>
+             </div>
+         </div>
+     </div>
+ </div>
+<div class="contentjosepghContaienr">
+    <div class="container">
+        <p>We deliver ROI-centric solutions that resonate with CEOs and stakeholders in small- and medium-sized businesses everywhere in the US. Recently, we’ve provided unique perspectives and services to funded startups focused on scalability.  Our mantra never deviates from best industry practices to derive innovative processes affordably, leaving no stone unturned. One thing that stays constant in a dynamic arena is the personal and partnership touch that underlies our consulting approach.</p>
+        <p>We make it our business to meet all your challenges head-on. To do so, we frequently diagnose process opportunities, implement process mapping to improve workflow, and devise other penetrating actions that promote improved performance fast. You can rely on us for results that you can see in your bottom line. We’re nothing if not flexible and adaptable to your organization’s changes, and with upheavals heralding in 2020, that’s what you need right now. You’ll quickly see upliftment in crucial  KPIs, which we will integrate into your system if not there now. Our strategic thinking revolves around tracking, monitoring, and measuring the project performances that drive your business to success.</p>
+        <p>What I did for my Fortune 500 clients, I can do for you - at a fraction of the cost. My proprietary consultation formula guarantees it in three easy steps. Industry type is not an obstacle because our proven techniques transcend industry borders. I will competently transition you from a manual, paper-based system to a digital Business Process Management System (BPMS) if needed. Thinking about joining our family? Contact me for a free consultation with no obligation - there’s nothing to lose.</p>
+        <h2>Joseph Paglinawan</h2>
+    </div>
+</div>
 
 
 
