--- a/about.html
+++ b/about.html
@@ -114,13 +114,12 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="contentBrandStory">
-                        <h2><span>Our</span> brand Story</h2>
-                        <p>Founded in 2019 and headquartered in Denver CO, Nazzo Nutrition aims to enhance people’s lives through high -quality nutrition products, ifestyle tools and education. We hope to nourish, educate, and inspire people from all walks of life to live better, reach their personal, professional, and athletic goals, and make more impact.</p>
-                        <p>Whatever you do, we are here to power your hustle.</p>
+                        <h2><span>Embrace</span> better nutrition</h2>
+                        <p>As a serial entrepreneur and businessman, I work incredibly long days. I struggled with my mental and physical health as I was constantly too focused on work to eat, had trouble sleeping because I couldn't quiet my mind, had poor digestion from not getting enough vital nutrients and making poor food choices that were time-convenient.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="./images/26.png">
+                    <img src="./images/34.png">
                 </div>
             </div>
         </div>
@@ -134,7 +133,7 @@
     <div class="sliderTestimonials">
         <div class="container">
             <img src="./images/30.png" class="commas">
-            <h2>What They Say</h2>
+            <h2><span>What</span> They Say</h2>
             <div class="sliderCOntainerTestimonials">
                 <div class="innerSliderContainer">
                     <div class="contentSlidertestimonials">
