making the product page shop page completed

--- a/shop.html
+++ b/shop.html
@@ -72,7 +72,55 @@
             </div>
         </div>
     </div>
-
+    <div class="shopPage">
+        <div class="container">
+            <h2>Our Products</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="shopBoxContainer">
+                        <div class="imageContainerShopProduct">
+                            <img src="./images/36.png">
+                            <div class="fixedShopProduct">
+                                <a href="" class="containnerInnerFixedShop">
+                                    <h3>Brainflow</h3>
+                                    <p>Aenean sed nibh a magna posuere tempor. Nunc faucibus pellentesque nunc in aliquet. Donec congue, nunc vel.</p>
+                                    <span>$30.99</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="shopBoxContainer">
+                        <div class="imageContainerShopProduct">
+                            <img src="./images/36.png">
+                            <div class="fixedShopProduct">
+                                <a href="" class="containnerInnerFixedShop">
+                                    <h3>Brainflow</h3>
+                                    <p>Aenean sed nibh a magna posuere tempor. Nunc faucibus pellentesque nunc in aliquet. Donec congue, nunc vel.</p>
+                                    <span>$30.99</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="shopBoxContainer">
+                        <div class="imageContainerShopProduct">
+                            <img src="./images/36.png">
+                            <div class="fixedShopProduct">
+                                <a href="" class="containnerInnerFixedShop">
+                                    <h3>Brainflow</h3>
+                                    <p>Aenean sed nibh a magna posuere tempor. Nunc faucibus pellentesque nunc in aliquet. Donec congue, nunc vel.</p>
+                                    <span>$30.99</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer style="background-image: url(./images/21.png);">
         <div class="newsLetter">
             <div class="container">
