--- a/product.html
+++ b/product.html
@@ -152,6 +152,7 @@
                                 </a>
                             </div>  
                             <div class="socialSharing">
+                                <label>Sahre:</label>
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
