--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
             <p>NazzoNutrition delivers quality nutritional products, tools and resources you need to maximize your physical and mental performance and become the best version of yourself.</p>
         </div>
     </div>
-    <div class="brandStory">
+    <div class="brandStory" id="brandStory2">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
