--- a/index.html
+++ b/index.html
@@ -80,19 +80,31 @@
                                 <ul>
                                     <li>
                                         <img src="./images/4.png">
-                                        <span>Vitamin C (organic amla fruit Extract)</span>
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/5.png">
-                                        <span>organic elderberry (Fruit Extract)</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/6.png">
-                                        <span>organic astragalus(Extract Root)</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/7.png">
-                                        <span>organic Oregano Leaf Powder</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                 </ul>
                             </div>
@@ -207,6 +219,70 @@
                             <span>Shop brainflow <img src="./images/13.png"></span>
                         </div>
                     </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="sliderTestimonials">
+        <div class="container">
+            <img src="./images/30.png" class="commas">
+            <h2><span>What</span> They Say</h2>
+            <div class="sliderCOntainerTestimonials">
+                <div class="innerSliderContainer">
+                    <div class="contentSlidertestimonials">
+                        <p>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                        <div class="authorInfoTestimonials">
+                            <div class="imageCOntaienrtestmonialAuthor">
+                                <img src="./images/31.png">
+                            </div>
+                            <div class="authorInforData">
+                                <h6>Louis Collins</h6>
+                                <p>Co-Founder of FLX Bike & Miles Board</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="innerSliderContainer">
+                    <div class="contentSlidertestimonials">
+                        <p>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                        <div class="authorInfoTestimonials">
+                            <div class="imageCOntaienrtestmonialAuthor">
+                                <img src="./images/31.png">
+                            </div>
+                            <div class="authorInforData">
+                                <h6>Louis Collins</h6>
+                                <p>Co-Founder of FLX Bike & Miles Board</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="innerSliderContainer">
+                    <div class="contentSlidertestimonials">
+                        <p>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                        <div class="authorInfoTestimonials">
+                            <div class="imageCOntaienrtestmonialAuthor">
+                                <img src="./images/31.png">
+                            </div>
+                            <div class="authorInforData">
+                                <h6>Louis Collins</h6>
+                                <p>Co-Founder of FLX Bike & Miles Board</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="innerSliderContainer">
+                    <div class="contentSlidertestimonials">
+                        <p>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                        <div class="authorInfoTestimonials">
+                            <div class="imageCOntaienrtestmonialAuthor">
+                                <img src="./images/31.png">
+                            </div>
+                            <div class="authorInforData">
+                                <h6>Louis Collins</h6>
+                                <p>Co-Founder of FLX Bike & Miles Board</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
