--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                                     <li>
                                         <img src="./images/4.png">
                                         <div class="contentInnerLis">
-                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
-                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                            <h6>Organic Elderberry (Fruit Extract)</h6>
+                                            <span>Lorem ipsum dolor sit amet, consetetur sadipscing elitr  diam nonumy eirmod.</span>
                                         </div>
                                     </li>
                                     <li>
@@ -109,25 +109,37 @@
                                 </ul>
                             </div>
                             <div class="col-md-4">
-                                <img src="./images/8.png">
+                                <img src="./images/p.png">
                             </div>
                             <div class="col-md-4">
                                 <ul>
                                     <li>
-                                        <img src="./images/9.png">
-                                        <span>organic Ginger (Extract Root)</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/10.png">
-                                        <span>organic moringa leaf powder (Moringa Oleifera)</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Organic Elderberry (Fruit Extract)</h6>
+                                            <span>Lorem ipsum dolor sit amet, consetetur sadipscing elitr  diam nonumy eirmod.</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/11.png">
-                                        <span>organic garlic bulb powder</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/12.png">
-                                        <span>organic Acacia gum</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                 </ul>
                             </div>
@@ -139,42 +151,66 @@
                                 <ul>
                                     <li>
                                         <img src="./images/4.png">
-                                        <span>Vitamin C (organic amla fruit Extract)</span>
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/5.png">
-                                        <span>organic elderberry (Fruit Extract)</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Organic Elderberry (Fruit Extract)</h6>
+                                            <span>Lorem ipsum dolor sit amet, consetetur sadipscing elitr  diam nonumy eirmod.</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/6.png">
-                                        <span>organic astragalus(Extract Root)</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/7.png">
-                                        <span>organic Oregano Leaf Powder</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                 </ul>
                             </div>
                             <div class="col-md-4">
-                                <img src="./images/8.png">
+                                <img src="./images/p.png">
                             </div>
                             <div class="col-md-4">
                                 <ul>
                                     <li>
-                                        <img src="./images/9.png">
-                                        <span>organic Ginger (Extract Root)</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/10.png">
-                                        <span>organic moringa leaf powder (Moringa Oleifera)</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Organic Elderberry (Fruit Extract)</h6>
+                                            <span>Lorem ipsum dolor sit amet, consetetur sadipscing elitr  diam nonumy eirmod.</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/11.png">
-                                        <span>organic garlic bulb powder</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                     <li>
-                                        <img src="./images/12.png">
-                                        <span>organic Acacia gum</span>
+                                        <img src="./images/4.png">
+                                        <div class="contentInnerLis">
+                                            <h6>Vitamin C (Organic Amla Fruit Extract)</h6>
+                                            <span>Vitamin C (organic amla fruit Extract)</span>
+                                        </div>
                                     </li>
                                 </ul>
                             </div>
@@ -349,6 +385,55 @@
                 </div>
             </div>
         </div>  
+    </div>
+        <div class="shopPage">
+        <div class="container">
+            <h2>Our Products</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="shopBoxContainer">
+                        <div class="imageContainerShopProduct">
+                            <img src="./images/b.png">
+                            <div class="fixedShopProduct">
+                                <a href="" class="containnerInnerFixedShop">
+                                    <h3>Brainflow</h3>
+                                    <p>Aenean sed nibh a magna posuere tempor. Nunc faucibus pellentesque nunc in aliquet. Donec congue, nunc vel.</p>
+                                    <span>$30.99</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="shopBoxContainer">
+                        <div class="imageContainerShopProduct">
+                            <img src="./images/b.png">
+                            <div class="fixedShopProduct">
+                                <a href="" class="containnerInnerFixedShop">
+                                    <h3>Brainflow</h3>
+                                    <p>Aenean sed nibh a magna posuere tempor. Nunc faucibus pellentesque nunc in aliquet. Donec congue, nunc vel.</p>
+                                    <span>$30.99</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="shopBoxContainer">
+                        <div class="imageContainerShopProduct">
+                            <img src="./images/b.png">
+                            <div class="fixedShopProduct">
+                                <a href="" class="containnerInnerFixedShop">
+                                    <h3>Brainflow</h3>
+                                    <p>Aenean sed nibh a magna posuere tempor. Nunc faucibus pellentesque nunc in aliquet. Donec congue, nunc vel.</p>
+                                    <span>$30.99</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="blog">
         <div class="container">
