--- a/index.html
+++ b/index.html
@@ -347,45 +347,7 @@
             </div>
         </div>
     </div>
-    <div class="products">
-        <div class="container">
-            <h2>Our Products</h2>
-            <div class="mobileSliderContainer">
-                <div class="sliderproducts">
-                    <div class="innerSliderContainers">
-                        <div class="imageContainerProducts">
-                            <a href="#"><img src="./images/19.png"></a>
-                        </div>
-                        <div class="icontentProducts">
-                            <h3><a href="#">Nutrarich</a></h3>
-                            <p>$30.99</p>
-                            <a href="#" class="addtoCart">Add to cart</a>
-                        </div>
-                    </div>
-                    <div class="innerSliderContainers">
-                        <div class="imageContainerProducts">
-                            <a href="#"><img src="./images/19.png"></a>
-                        </div>
-                        <div class="icontentProducts">
-                            <h3><a href="#">Nutrarich</a></h3>
-                            <p>$30.99</p>
-                            <a href="#" class="addtoCart">Add to cart</a>
-                        </div>
-                    </div>
-                    <div class="innerSliderContainers">
-                        <div class="imageContainerProducts">
-                            <a href="#"><img src="./images/19.png"></a>
-                        </div>
-                        <div class="icontentProducts">
-                            <h3><a href="#">Nutrarich</a></h3>
-                            <p>$30.99</p>
-                            <a href="#" class="addtoCart">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>  
-    </div>
+    <div class="products"></div>
         <div class="shopPage">
         <div class="container">
             <h2>Our Products</h2>
