--- a/rais/index.html
+++ b/rais/index.html
@@ -25,41 +25,183 @@
 </head>
 <body>
 
-
-
+    <div class="topBar">
+        <div class="contianer">
+            <p>FREE SHIPPING ON ALL ORDERS IN U.S.</p>
+        </div>
+    </div>
     <header>
         <div class="container">
             <div class="innerHeader">
-                <div class="flexed">
-                    <div class="logoContainer">
-                        <img src="./images/8.png">
-                    </div>
-                    <div class="menuContainer">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Shop</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">FAQ's</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                        </ul>
-                    </div>
-                    <div class="menuRight">
-                        <ul>
-                            <li><a href="#"><img src="./images/9.png"></a></li>
-                            <li><a href="#"><img src="./images/10.png"></a></li>
-                            <li><a href="#"><img src="./images/11.png"></a></li>
-                        </ul>
-                    </div>
+                <div class="logoContainer">
+                    <img src="./images/1.png">
+                </div>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="cartContaienrHeader">
+                    <a href="#">
+                        <img src="./images/2.png">
+                        <span>0</span>
+                    </a>
                 </div>
             </div>
         </div>
     </header>
 
+    <div class="bannerContainer">
+        <div class="container">
+            <h2>Collaborate, with health. Sterilize yourself.</h2>
+            <a href="#">Shop All</a>
+        </div>
+    </div>
+    <div class="bannerAfer">
+        <div class="container">
+            <p>With more time at home now than ever, you deserve products that will keep you and environment pristine. Find the Try Cleane curated health products to match your style, preference and experience.</p>
+        </div>
+    </div>
+    <div class="section2Container">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="boxContainerSection2" style="background-image: url('./images/4.png');">
+                        <div class="boxInnerContainer">
+                            <h2>Silicone Bottles</h2>
+                            <a href="#">Shop Now</a>
+                        </div>
+                    </div>
+                    <div class="boxContainerSection2" style="background-image: url('./images/5.png');">
+                        <div class="boxInnerContainer">
+                            <h2>UV Light Product</h2>
+                            <a href="#">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="boxContainerSection2" id="boxCOntainerSection3" style="background-image: url('./images/6.png');">
+                        <div class="boxInnerContainer">
+                            <h2>Silicone Bottles</h2>
+                            <a href="#">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="testimonials">
+        <div class="container">
+            <div class="sliderContainerTestimonials">
+                <img src="./images/7.png">
+                <div class="sliderContainer">
+                    <p>I absolutely love my Silicone bottles! The size is perfect and the lanyard is a bonus for my purse.I would have spent WAY more money at my local store buying the bottle, the lanyards, it would have been alot purchasing them separate.Thanks again for the convenience.
+                        <span>@Kenzee B.</span>
+                    </p>
+                    <p>I absolutely love my Silicone bottles! The size is perfect and the lanyard is a bonus for my purse.I would have spent WAY more money at my local store buying the bottle, the lanyards, it would have been alot purchasing them separate.Thanks again for the convenience.
+                        <span>@Kenzee B.</span>
+                    </p>
+                    <p>I absolutely love my Silicone bottles! The size is perfect and the lanyard is a bonus for my purse.I would have spent WAY more money at my local store buying the bottle, the lanyards, it would have been alot purchasing them separate.Thanks again for the convenience.
+                        <span>@Kenzee B.</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="ourPoroducts">
+        <div class="cotnainer">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Our Products</h2>
+                    <p>Strategically designed with a lanyard, you can attach it to your handbag, backpack, luggage, satchel, and bicycle you'll barely feel it there!</p>
+                    <p>Always have quick and easy access to your hand sanitizer by using our squeezable silicone container.Pull, pop the lid and squeeze to quickly clean your hands, then simply let it hang out of your way when done!</p>
+                    <a href="#">Shop now</a>
+                </div>
+                <div class="col-md-6">
+                    <div class="flexed">
+                        <div class="productContainer">
+                            <a href="#">
+                                <img src="./images/8.png">
+                                <h5>Silicone Bottle</h5>
+                                <p>From $65.00</p>
+                            </a>
+                        </div>
+                        <div class="productContainer">
+                            <a href="#">
+                                <img src="./images/8.png">
+                                <h5>Silicone Bottle</h5>
+                                <p>From $65.00</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
-
-
-
+    <div class="notJustProducts">
+        <div class="cotnainer">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Not Just Products</h2>
+                    <p>TryCleane is inspired by those who want to keep our enivorments clean and a better place. Your products are so much more than just décor!</p>
+                    <p>It is there for you wether your on the go,traveling or just want to have a healthy enivorment from your house to work.</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div class="col-md-6">
+                    <img src="./images/9.png">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="becomeAMember">
+        <div class="cotnainer">
+            <div class="joing">
+                <h2>Become A Member</h2>
+                <p>Join our #Trycleane Club to get rewards for growing with us!</p>
+                <p>As a member, you'll enjoy: $5 off your first order, points for every dollar you spend, early access to exclusive offers, and more.</p>
+                <a href="#">Join now</a>
+            </div>
+        </div>
+    </div>
+    <div class="blogPost">
+        <div class="container">
+            <div class="VLogPostContainer">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="ImagesContainerPost">
+                            <img src="./images/11.png">
+                            <img src="./images/11.png">
+                            <img src="./images/11.png">
+                            <img src="./images/11.png">
+                            <img src="./images/11.png">
+                            <img src="./images/11.png">
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="sliderRightPostContainer">
+                            <div class="sliderPostInner">
+                                <h6>Blog posts</h6>
+                                <h2>Cleane Solution</h2>
+                                <p>We continue to perfect the craft of keeping the products unused, and in a secured warehouse.So once your place your order it will get out to you in no time.Keep them excellent condition while they travel from our warehouse to your home.</p>
+                            </div>  
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
