--- a/rais/index.html
+++ b/rais/index.html
@@ -109,7 +109,7 @@
         </div>
     </div>
     <div class="ourPoroducts">
-        <div class="cotnainer">
+        <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h2>Our Products</h2>
