--- a/rais/index.html
+++ b/rais/index.html
@@ -51,7 +51,7 @@
         </div>
     </header>
 
-    <div class="bannerContainer">
+    <div class="bannerContainer" style="background-image: url('./images/3.png');">
         <div class="container">
             <h2>Collaborate, with health. Sterilize yourself.</h2>
             <a href="#">Shop All</a>
@@ -140,7 +140,7 @@
     </div>
 
     <div class="notJustProducts">
-        <div class="cotnainer">
+        <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h2>Not Just Products</h2>
@@ -155,7 +155,7 @@
         </div>
     </div>
     <div class="becomeAMember">
-        <div class="cotnainer">
+        <div class="container">
             <div class="joing">
                 <h2>Become A Member</h2>
                 <p>Join our #Trycleane Club to get rewards for growing with us!</p>
